# mini-banking

./: .env  README.md  banking  schema.sql  script.txt
docs/: er.plantuml  uml.drawio  usecase.md
self-banking/: Cargo.toml  diesel.toml
self-banking/src/: main.rs
self-banking/src/application/usecase/: asset_type.rs  mod.rs
self-banking/src/config/: db_config.rs
self-banking/src/domain/: mod.rs
self-banking/src/domain/dto/: asset.rs  asset_type.rs  contact.rs  contact_type.rs  current_sheet.rs  expense.rs  expense_type.rs  mod.rs  transaction.rs
self-banking/src/domain/entities/: schema.rs
self-banking/src/domain/migration/2025-05-08-084214_assest_type/: down.sql  up.sql
self-banking/src/domain/migration/2025-05-08-090436_create_assest/: down.sql  up.sql
self-banking/src/domain/migration/2025-05-08-090605_create_expense_type/: down.sql  up.sql
self-banking/src/domain/migration/2025-05-08-090704_create_expense/: down.sql  up.sql
self-banking/src/domain/migration/2025-05-08-090802_create_contact_type/: down.sql  up.sql
self-banking/src/domain/migration/2025-05-08-094916_create_contact_table/: down.sql  up.sql
self-banking/src/domain/migration/2025-05-08-095008_create_transaction_record_table/: down.sql  up.sql
self-banking/src/domain/migration/2025-05-08-095050_create_current_sheet_table/: down.sql  up.sql
self-banking/src/domain/migration/2025-05-08-103803_change_float_to_double/: down.sql  up.sql
self-banking/src/domain/model/: asset.rs  asset_type.rs  contact.rs  contact_type.rs  current_sheet.rs  expense.rs  expense_type.rs  transaction.rs
self-banking/src/domain/repositories/: asset_type.rs  mod.rs
self-banking/src/infrastructure/: mod.rs
self-banking/src/infrastructure/sqlite/: mod.rs  sqlite_connection.rs
self-banking/src/infrastructure/sqlite/repository_impl/: asset_type.rs  mod.rs
