[package]
name = "self-banking"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { version = "0.1.5", features = ["server"] }
tokio = { version = "1.45.0", features = ["full"] }
serde = {version = "1.0.219", features = ["derive"]}

diesel = { version = "2.2.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }

dotenv = "0.15.0"
thiserror = "2.0.12"
validator = {version = "0.20.0", features = ["derive"]}
